--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -284,6 +284,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{T} = 128$] The maximum number of extrinsics in a work-package.
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
   \item[$\mathsf{V} = 1023$] The total number of validators.
+  \item[$\mathsf{W}_A = 64,000$] The maximum size of is-authorized code in octets.
   \item[$\mathsf{W}_B = 12\cdot2^{20}$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
   \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
   \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
