--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -1,4 +1,6 @@
-\section{Validator Activity Statistics}\label{sec:bookkeeping}
+\section{Statistics}\label{sec:bookkeeping}
+
+\subsection{Validator Activity}
 
 The \Jam chain does not explicitly issue rewards---we leave this as a job to be done by the staking subsystem (in Polkadot's case envisioned as a system parachain---hosted without fees---in the current imagining of a public \Jam network). However, much as with validator punishment information, it is important for the \Jam chain to facilitate the arrival of information on validator activity in to the staking subsystem so that it may be acted upon.
 
@@ -58,6 +60,8 @@ The objective statistics are updated in line with their description, formally:
 \end{align}
 
 Note that $\mathbf{R}$ is the \emph{Reporters} set, as defined in equation \ref{eq:guarantorsig}.
+
+\subsection{Cores and Services}
 
 The other two components of statistics are the core and service activity statistics. These are tracked only on a per-block basis unlike the validator statistics which are tracked over the whole epoch.
 
