Terminology: rename instances of PolkaVM to PolkadotVM

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -48,7 +48,7 @@ Unlike with \textsc{snark}-based L2-blockchain techniques for scaling, this mode
 
 We begin with a brief overview of present scaling approaches in blockchain technology in section \ref{sec:previouswork}. In section \ref{sec:notation} we define and clarify the notation from which we will draw for our formalisms.
 
-We follow with a broad overview of the protocol in section \ref{sec:overview} outlining the major areas including the Polka Virtual Machine (\textsc{pvm}), the consensus protocols Safrole and \textsc{Grandpa}, the common clock and build the foundations of the formalism.
+We follow with a broad overview of the protocol in section \ref{sec:overview} outlining the major areas including the Polkadot Virtual Machine (\textsc{pvm}), the consensus protocols Safrole and \textsc{Grandpa}, the common clock and build the foundations of the formalism.
 
 We then continue with the full protocol definition split into two parts: firstly the correct on-chain state-transition formula helpful for all nodes wishing to validate the chain state, and secondly, in sections \ref{sec:workpackagesandworkreports} and \ref{sec:bestchain} the honest strategy for the off-chain actions of any actors who wield a validator key.
 
