--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -1,4 +1,4 @@
-\section{Polka Virtual Machine}\label{sec:virtualmachine}
+\section{Polkadot Virtual Machine}\label{sec:virtualmachine}
 
 %TODO: First 64KB of memory is always inaccessible.
 
