WPs&WRs: Gracefully handle oversize reports

--- a/preamble.tex
+++ b/preamble.tex
@@ -103,6 +103,7 @@
 \newcommand*{\error}{\nabla}
 \newcommand*{\panic}{\lightning}
 \newcommand*{\badexports}{\circledcirc}
+\newcommand*{\oversize}{\circleddash}
 \newcommand*{\host}{\hbar}
 \newcommand*{\halt}{\blacksquare}
 \newcommand*{\fault}{\text{\raisebox{6pt}{\rotatebox{180}{\textsf{F}}}}}
