--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -160,8 +160,9 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     1 &\when o = \infty \\
     2 &\when o = \panic \\
     3 &\when o = \badexports \\
-    4 &\when o = \token{BAD} \\
-    5 &\when o = \token{BIG} \\
+    4 &\when o = \oversize \\
+    5 &\when o = \token{BAD} \\
+    6 &\when o = \token{BIG} \\
   \end{cases}\\
   \se_I(h \in \H \cup \H^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
     (h, \se_2(i)) &\when h \in \H\\
