--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -123,6 +123,9 @@
     \item[$\Omega_Y$] Fetch data host-call.
     \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
     \item[$\Omega_\Taurus$] Yield accumulation trie result host-call.
+    \item[$\Omega_\Aries$] Provide preimage host-call.
+    \item[$\Omega_\Gemini$] Read chain configuration constants host-call.
+    \item[$\Omega_\Leo$] Read accumulation entropy host-call.
   \end{description}
 \end{description}
 
