--- a/text/best_chain.tex
+++ b/text/best_chain.tex
@@ -31,3 +31,9 @@ Formally, we aim to select $\mathbf{B}^\best$ to maximize the value $m$ where:
 \begin{equation}
   m = \sum_{\mathbf{H}^A \in \mathbf{A}^\best} \mathbf{T}^A
 \end{equation}
+
+The specific data to be voted on in \textsc{Grandpa} shall be the block header of the best block, $\mathbf{B}^\best$ together with its \emph{posterior} state root, $\mathcal{M}_\omega(\omega')$. The state root has no direct relevance to the \textsc{Grandpa} protocol, but is included alongside the header during voting/signing into order to ensure that systems utilizing the output of \textsc{Grandpa} are able to verify the most recent chain state as possible.
+
+This implies that the posterior state must be known at the time that \textsc{Grandpa} voting occurs in order to finalize the block. However, since \textsc{Grandpa} is relied on primarily for state-root verification it makes little sense to finalize a block without an associated commitment to the posterior state.
+
+The posterior state only affects \textsc{Grandpa} voting in so much as votes for the same block hash but with different associated posterior state roots are considered votes for different blocks. This would only happen in the case of a misbehaving node or an ambiguity in the present document.
