PVM Invocations: Introduce `inspect_package` host-call

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -122,6 +122,7 @@
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
     \item[$\Omega_Y$] Fetch data host-call.
     \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
+    \item[$\Omega_\Scorpio$] Package inspection host-call.
     \item[$\Omega_\Taurus$] Yield accumulation trie result host-call.
     \item[$\Omega_\Aries$] Provide preimage host-call.
     \item[$\Omega_\Gemini$] Read chain configuration constants host-call.
