Switch the order of fields in OperandTuple to ensure it's possible to easily avoid the auth trace.

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -184,10 +184,10 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     \isa{\ot¬packagehash}{\H},
     \isa{\ot¬segroot}{\H},
     \isa{\ot¬authorizer}{\H},
-    \isa{\ot¬authtrace}{\Y},
     \isa{\ot¬payloadhash}{\H},
     \isa{\ot¬gaslimit}{\N_G},
-    \isa{\ot¬result}{\Y \cup \mathbb{J}}
+    \isa{\ot¬result}{\Y \cup \mathbb{J}},
+    \isa{\ot¬authtrace}{\Y}
   }
 \end{equation}
 \begin{align}
