--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -154,7 +154,7 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   ) \\
   \se(x \in \mathbb{C}) &\equiv \se(x_\mathbf{y}, x_r) \\
   \se(x \in \defxfer) &\equiv \se(\se_4(x_s), \se_4(x_d), \se_8(x_a), \se(x_m), \se_8(x_g)) \\
-  \se(x \in \operandtuple) &\equiv \se(x_\ot¬packagehash, x_\ot¬segroot, x_\ot¬authorizer, \var{x_\ot¬authtrace}, x_\ot¬payloadhash, x_\ot¬gaslimit, O(x_\ot¬result)) \\
+  \se(x \in \operandtuple) &\equiv \se(x_\ot¬packagehash, x_\ot¬segroot, x_\ot¬authorizer,  x_\ot¬payloadhash, x_\ot¬gaslimit, O(x_\ot¬result), \var{x_\ot¬authtrace}) \\
   O(o \in \mathbb{J} \cup \Y) &\equiv \begin{cases}
     (0, \var{o}) &\when o \in \Y \\
     1 &\when o = \infty \\
